--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "type":"module",
+  "scripts": {
+    "fix": "npx eslint . --fix"
+  },
   "devDependencies": {
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
