--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "embeddedLanguageFormatting": "auto"
   }
   
